fix : zgc 옵션변경